fix: header nav align center

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,18 +5,15 @@
 }
 
 .header__content {
+  height: 100%;
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 70px;
-}
-
-.header__logo {
-  margin-top: 18px;
 }
 
 @media screen and (max-width: 1279px) {
