--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,5 +1,4 @@
 .nav {
-  margin-top: 25px;
 }
 
 .nav__content {
